src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
  --primary: #f97316;
  --secondary: #3b82f6;

  --primary-accent: #ea580c;
  --foreground-accent: #454545;
  --hero-background: #FFF7ED;
}

html {
  @apply scroll-smooth;
}

body {
  @apply text-lg;
  
  color: var(--foreground);
  background: var(--background);
  font-family: "Source Sans 3", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.manrope {
  font-family: "Manrope", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Manrope", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

#logos svg {
  @apply w-fit h-10 sm:h-12;
}

.benefit-section:last-of-type > div {
  @apply mb-10;
}

